Fetch API: consumo de APIs REST

--- a/index.html
+++ b/index.html
@@ -618,6 +618,104 @@
     </div>
   </div>
 
+  <!-- JavaScript & APIs Web Section -->
+  <div class="max-w-6xl mx-auto px-4 mt-16">
+    <div class="text-center mb-12 fade-in-up">
+      <h2 class="text-4xl font-bold text-white mb-4 float-animation">
+        🚀 JavaScript y APIs Web
+      </h2>
+      <p class="text-xl text-blue-100 max-w-2xl mx-auto px-4">
+        Aprende sobre la evolución de JavaScript y el poder de las APIs modernas
+      </p>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <!-- Qué es Fetch API -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.3s">
+        <div class="bg-gradient-to-r from-green-500 to-green-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🌐 ¿Qué es Fetch API?</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">La nueva forma de hacer peticiones HTTP en JavaScript</p>
+          <a href="javascript/que-es-fetch-api.html" class="inline-block bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600 transition-colors">
+            Descubrir →
+          </a>
+        </div>
+      </div>
+      <!-- Historia de las APIs Web -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.1s">
+        <div class="bg-gradient-to-r from-yellow-500 to-yellow-600 p-4 text-white">
+          <h3 class="text-xl font-bold">📜 Historia de las APIs Web</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Descubre cómo surgieron y evolucionaron las APIs en la web</p>
+          <a href="javascript/historia-apis-web.html" class="inline-block bg-yellow-500 text-white px-4 py-2 rounded-lg hover:bg-yellow-600 transition-colors">
+            Explorar →
+          </a>
+        </div>
+      </div>
+      <!-- Qué son las APIs REST -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.2s">
+        <div class="bg-gradient-to-r from-blue-500 to-blue-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🔗 ¿Qué son las APIs REST?</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Conceptos clave y funcionamiento de las APIs REST</p>
+          <a href="javascript/que-son-apis-rest.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition-colors">
+            Aprender →
+          </a>
+        </div>
+      </div>
+      <!-- Métodos HTTP -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.4s">
+        <div class="bg-gradient-to-r from-indigo-500 to-indigo-600 p-4 text-white">
+          <h3 class="text-xl font-bold">⚡ Métodos HTTP</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">GET, POST, PUT, DELETE y su uso en APIs</p>
+          <a href="javascript/metodos-http.html" class="inline-block bg-indigo-500 text-white px-4 py-2 rounded-lg hover:bg-indigo-600 transition-colors">
+            Consultar →
+          </a>
+        </div>
+      </div>
+      <!-- Peticiones Fetch -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.5s">
+        <div class="bg-gradient-to-r from-cyan-500 to-cyan-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🌊 Peticiones Fetch</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Cómo realizar peticiones y manejar respuestas</p>
+          <a href="javascript/peticiones-fetch.html" class="inline-block bg-cyan-500 text-white px-4 py-2 rounded-lg hover:bg-cyan-600 transition-colors">
+            Practicar →
+          </a>
+        </div>
+      </div>
+      <!-- Manejo de Respuestas -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.6s">
+        <div class="bg-gradient-to-r from-pink-500 to-pink-600 p-4 text-white">
+          <h3 class="text-xl font-bold">📦 Manejo de Respuestas</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Procesa datos recibidos de APIs de forma eficiente</p>
+          <a href="javascript/manejo-respuestas.html" class="inline-block bg-pink-500 text-white px-4 py-2 rounded-lg hover:bg-pink-600 transition-colors">
+            Aprender →
+          </a>
+        </div>
+      </div>
+      <!-- Manejo de Errores -->
+      <div class="bg-white rounded-xl shadow-xl overflow-hidden hover:shadow-2xl transition-all duration-300 transform hover:scale-105 fade-in-up" style="animation-delay: 0.7s">
+        <div class="bg-gradient-to-r from-red-500 to-red-600 p-4 text-white">
+          <h3 class="text-xl font-bold">🚨 Manejo de Errores</h3>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-600 mb-4">Aprende a detectar y gestionar errores en tus peticiones</p>
+          <a href="javascript/manejo-errores.html" class="inline-block bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition-colors">
+            Dominar →
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Footer -->
   <footer class="text-center mt-16 fade-in-up delay-10">
     <p class="text-blue-100 mt-2">
